--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,14 @@
 # Configuración de correo (Exchange EWS / MAPI)
 
 # Credenciales del buzón de Exchange
-MAIL_USER=alertas@empresa.local
+MAIL_USER=usuario
 MAIL_PASS=tu-contraseña
 
-# (Opcional) Usuario/clave específicos para EWS.
-# Si los defines, se usan en lugar de MAIL_USER / MAIL_PASS.
-#EWS_USER=otro.usuario@empresa.local
-#EWS_PASS=otra-contraseña
+# Dominio y workstation para NTLM
+NTLM_DOMAIN=domain
+NTLM_WORKSTATION=workstation
+
+
 
 # Carpetas de correo
 MAIL_FOLDER=INBOX
